<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:fillViewport="true"
    tools:ignore="Deprecated,LabelFor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PersonalityName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />

            <ImageView
                android:id="@+id/TreeAvatar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/tree_avatar_desc" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/NeedsTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/needs" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/LightNeedDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/light_need" />

                <EditText
                    android:id="@+id/LightNeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/WarmthNeedDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/warmth_need" />

                <EditText
                    android:id="@+id/WarmthNeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/WaterNeedDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/water_need" />

                <EditText
                    android:id="@+id/WaterNeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/NutriNeedDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/nutri_need" />

                <EditText
                    android:id="@+id/NutriNeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/ResitencesTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resistances" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/WindResistDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/wind_resist" />

                <EditText
                    android:id="@+id/WindResist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/FireResistDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/fire_resist" />

                <EditText
                    android:id="@+id/FireResist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/ColdResistDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/cold_resist" />

                <EditText
                    android:id="@+id/ColdResist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/PolutionResistDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/pollution_resist" />

                <EditText
                    android:id="@+id/PolutionResist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/stat_temp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/VigorDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/vigor" />

                <EditText
                    android:id="@+id/VigorStat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/vigor_unknown" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/AbilitySpecialTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/special_ability" />

        <EditText
            android:id="@+id/AbilitySpecialDESC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:inputType="none"
            android:text="@string/desc_temp" />

    </LinearLayout>



</ScrollView>